--- a/azurify-landing/index.html
+++ b/azurify-landing/index.html
@@ -137,7 +137,7 @@
 
     <div id="downloads" class="content-section">
         <h2>Downloads ⬇️</h2>
-        <p>This is where you can find the latest versions of our tools. We regularly update our software to provide new features and ensure a seamless experience.</p>
+        <p>This is where you can find the latest versions of my tools and projects. I regularly update my projects to provide new features and ensure a seamless experience.</p>
         <a href="#" class="download-btn" onclick="downloadAndRedirect(event)">
             ⚡ DOWNLOAD AZURIFY V1.0.0 ⚡
         </a>
@@ -145,12 +145,12 @@
 
     <div id="about-website" class="content-section">
         <h2>About The Website 🌐</h2>
-        <p>AZURIFY.cc is a hub for premium digital tools, designed to simplify complex tasks and empower users with efficient solutions. Our mission is to provide high-quality, reliable software that meets your needs.</p>
+        <p>AZURIFY.CC is a hub for premium digital tools, designed to simplify complex tasks and empower users with efficient solutions. My mission is to provide high-quality, reliable software that meets your needs.</p>
     </div>
 
     <div id="about-me" class="content-section">
         <h2>About Me 🙋‍♂️</h2>
-        <p>Hello, I'm Azure, the creator of AZURIFY.cc. I'm a passionate developer who loves building innovative tools and solutions. I'm dedicated to creating software that is not only powerful but also easy and enjoyable to use. If you have any feedback or ideas, feel free to reach out!</p>
+        <p>Hello, I'm Azure, the creator of AZURIFY.CC! I'm a passionate developer who loves building innovative tools and solutions. I'm dedicated to creating software that is not only powerful but also easy and enjoyable to use. If you have any feedback or ideas, feel free to reach out!</p>
     </div>
 
     <script>
