--- a/azurify-landing/index.html
+++ b/azurify-landing/index.html
@@ -131,7 +131,7 @@
     
     <div id="home" class="content-section">
         <h1 class="title">AZURIFY.CC</h1>
-        <p>Premium multi-tool for all your needs</p>
+        <p>Premium tools for all your needs</p>
         <p>Made with 💗 by Azure</p>
     </div>
 
