--- a/azurify-landing/index.html
+++ b/azurify-landing/index.html
@@ -9,6 +9,7 @@
   .neon-text { text-shadow: 0 0 5px #0ff, 0 0 20px #0ff; }
   .card { background: #111; border-radius: 12px; padding: 20px; transition: 0.3s; cursor: pointer; }
   .card:hover { box-shadow: 0 0 20px #0ff; transform: translateY(-5px); }
+  .card img { width: 200px; height: 200px; object-fit: cover; border-radius: 12px; }
 </style>
 </head>
 <body class="p-10">
@@ -28,7 +29,7 @@ async function loadProducts() {
       const card = document.createElement('div');
       card.className = 'card text-center';
       card.innerHTML = `
-        <img src="${p.image}" alt="${p.title}" class="mx-auto mb-4 rounded-lg">
+        <img src="https://files.catbox.moe/4nes5h.png" alt="${p.title}" class="mx-auto mb-4">
         <h2 class="text-2xl font-bold">${p.title}</h2>
         <p class="mb-4 text-gray-400">${p.description}</p>
         <p class="text-xl font-bold mb-4">$${p.price}</p>
