--- a/azurify-landing/index.html
+++ b/azurify-landing/index.html
@@ -5,15 +5,15 @@
 <title>KCWZ SAB STORE</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-  body { background: #0a0a0f; color: white; font-family: 'Poppins', sans-serif; }
+  body { background: #0a0a0f; color: white; font-family: 'Poppins', sans-serif; margin: 0; padding-top: 80px; }
   .neon-text { text-shadow: 0 0 5px #0ff, 0 0 20px #0ff; }
   .card { background: #111; border-radius: 12px; padding: 20px; transition: 0.3s; cursor: pointer; }
   .card:hover { box-shadow: 0 0 20px #0ff; transform: translateY(-5px); }
   .card img { width: 200px; height: 200px; object-fit: cover; border-radius: 12px; }
   .discord-logo {
     position: fixed;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     width: 80px;
     height: 80px;
     cursor: pointer;
@@ -21,52 +21,32 @@
     filter: drop-shadow(0 0 5px #0ff) drop-shadow(0 0 20px #0ff);
   }
   .discord-logo:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
     filter: drop-shadow(0 0 10px #0ff) drop-shadow(0 0 30px #0ff);
   }
 </style>
 </head>
-<body class="p-10">
+<body>
 
-<h1 class="text-5xl font-bold text-center neon-text mb-12">KCWZ SAB STORE</h1>
-
-<!-- Discord logo in top-right corner -->
+<!-- Discord logo locked to top-right -->
 <a href="https://discord.gg/yExXAmrr6T" target="_blank">
   <img src="https://files.catbox.moe/oyttg3.webp" alt="Discord" class="discord-logo">
 </a>
 
+<h1 class="text-5xl font-bold text-center neon-text mb-12">KCWZ SAB STORE</h1>
+
 <div class="grid md:grid-cols-3 gap-8" id="products-grid"></div>
 
 <script>
-// Fallback products if products.json cannot be loaded
 const fallbackProducts = [
-  {
-    id: "brainrot-pass",
-    title: "Golden Esok Sekolah (37.5M/s)",
-    description: "GOATED BRAINROT FOR A GOATED PRICE!",
-    price: "15.00 AUD",
-    link: "https://buy.stripe.com/eVq00lezM9kgfOL3c948000"
-  },
-  {
-    id: "vip-glow",
-    title: "Diamond La Cucaracha (4.9M/s)",
-    description: "COMES WITH FIRE AND TACO HAT TRAITS",
-    price: "8.00 AUD",
-    link: "https://buy.stripe.com/7sY8wRcrEcws6ebcMJ48001"
-  },
-  {
-    id: "brainrot-bundle",
-    title: "Galaxy Los Trala (7M/s)",
-    description: "COMES WITH BUBBLEGUM AND TACO HAT TRAITS",
-    price: "10.00 AUD",
-    link: "https://buy.stripe.com/6oU8wR4Zc1RO31ZfYV48002"
-  }
+  { id: "brainrot-pass", title: "Golden Esok Sekolah (37.5M/s)", description: "GOATED BRAINROT FOR A GOATED PRICE!", price: "15.00 AUD", link: "https://buy.stripe.com/eVq00lezM9kgfOL3c948000" },
+  { id: "vip-glow", title: "Diamond La Cucaracha (4.9M/s)", description: "COMES WITH FIRE AND TACO HAT TRAITS", price: "8.00 AUD", link: "https://buy.stripe.com/7sY8wRcrEcws6ebcMJ48001" },
+  { id: "brainrot-bundle", title: "Galaxy Los Trala (7M/s)", description: "COMES WITH BUBBLEGUM AND TACO HAT TRAITS", price: "10.00 AUD", link: "https://buy.stripe.com/6oU8wR4Zc1RO31ZfYV48002" }
 ];
 
 async function loadProducts() {
   const container = document.getElementById('products-grid');
   let products = [];
-
   try {
     const res = await fetch('products.json');
     if (!res.ok) throw new Error('Network response not ok');
