--- a/azurify-landing/index.html
+++ b/azurify-landing/index.html
@@ -6,7 +6,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
   body { background: #0a0a0f; color: white; font-family: 'Poppins', sans-serif; margin: 0; padding-top: 80px; }
-  .neon-text { text-shadow: 0 0 5px #0ff, 0 0 20px #0ff; }
+  .neon-text { text-shadow: 0 0 5px #0ff, 0 0 20px #0ff; position: sticky; top: 0; background: #0a0a0f; z-index: 50; padding: 20px 0; }
   .card { background: #111; border-radius: 12px; padding: 20px; transition: 0.3s; cursor: pointer; }
   .card:hover { box-shadow: 0 0 20px #0ff; transform: translateY(-5px); }
   .card img { width: 200px; height: 200px; object-fit: cover; border-radius: 12px; }
@@ -19,6 +19,7 @@
     cursor: pointer;
     transition: 0.3s;
     filter: drop-shadow(0 0 5px #0ff) drop-shadow(0 0 20px #0ff);
+    z-index: 100;
   }
   .discord-logo:hover {
     transform: scale(1.2);
@@ -28,7 +29,7 @@
 </head>
 <body>
 
-<!-- Discord logo locked to top-right -->
+<!-- Discord logo fixed at top-right -->
 <a href="https://discord.gg/yExXAmrr6T" target="_blank">
   <img src="https://files.catbox.moe/oyttg3.webp" alt="Discord" class="discord-logo">
 </a>
