--- a/azurify-landing/index.html
+++ b/azurify-landing/index.html
@@ -5,25 +5,47 @@
 <title>KCWZ SAB STORE</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-  body { background: #0a0a0f; color: white; font-family: 'Poppins', sans-serif; margin: 0; padding-top: 80px; }
-  .neon-text { text-shadow: 0 0 5px #0ff, 0 0 20px #0ff; position: sticky; top: 0; background: #0a0a0f; z-index: 50; padding: 20px 0; }
-  .card { background: #111; border-radius: 12px; padding: 20px; transition: 0.3s; cursor: pointer; }
-  .card:hover { box-shadow: 0 0 20px #0ff; transform: translateY(-5px); }
-  .card img { width: 200px; height: 200px; object-fit: cover; border-radius: 12px; }
-  .discord-logo {
-    position: fixed;
-    top: 13px;
-    right: 20px;
-    width: 65px;
-    height: 65px;
-    cursor: pointer;
-    transition: 0.3s;
-    filter: drop-shadow(0 0 5px #0ff) drop-shadow(0 0 20px #0ff);
-    z-index: 100;
+  body {
+    background: #0a0a0f;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 40px 20px; /* Add padding around edges */
   }
-  .discord-logo:hover {
-    transform: scale(1.2);
-    filter: drop-shadow(0 0 10px #0ff) drop-shadow(0 0 30px #0ff);
+  
+  .neon-text {
+    text-shadow: 0 0 5px #0ff, 0 0 20px #0ff;
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
+  
+  #products-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    max-width: 1200px; /* constrain width */
+    margin: 0 auto; /* center grid */
+  }
+  
+  .card {
+    background: #111;
+    border-radius: 12px;
+    padding: 20px;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  .card:hover {
+    box-shadow: 0 0 20px #0ff;
+    transform: translateY(-5px);
+  }
+  .card img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 12px;
+    display: block;
+    margin: 0 auto 1rem;
   }
 </style>
 </head>
