--- a/azurify-landing/index.html
+++ b/azurify-landing/index.html
@@ -10,84 +10,135 @@
     color: white;
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    padding: 40px 20px; /* Add padding around edges */
+    padding: 40px 20px; /* padding around edges */
   }
-  
+
   .neon-text {
     text-shadow: 0 0 5px #0ff, 0 0 20px #0ff;
     text-align: center;
     font-size: 3rem;
     margin-bottom: 2rem;
   }
-  
+
   #products-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
-    max-width: 1200px; /* constrain width */
-    margin: 0 auto; /* center grid */
+    max-width: 1200px;
+    margin: 0 auto;
   }
-  
+
   .card {
     background: #111;
     border-radius: 12px;
     padding: 20px;
     transition: 0.3s;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+
   .card:hover {
     box-shadow: 0 0 20px #0ff;
     transform: translateY(-5px);
   }
+
   .card img {
     width: 200px;
     height: 200px;
     object-fit: cover;
     border-radius: 12px;
-    display: block;
-    margin: 0 auto 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .card button {
+    background: #0ff;
+    color: black;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .card button:hover {
+    background: white;
+  }
+
+  .discord-logo {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    transition: 0.3s;
+    filter: drop-shadow(0 0 5px #0ff) drop-shadow(0 0 20px #0ff);
+    z-index: 100;
+  }
+
+  .discord-logo:hover {
+    transform: scale(1.2);
+    filter: drop-shadow(0 0 10px #0ff) drop-shadow(0 0 30px #0ff);
   }
 </style>
 </head>
 <body>
 
-<!-- Discord logo fixed at top-right -->
+<!-- Discord logo fixed top-right -->
 <a href="https://discord.gg/yExXAmrr6T" target="_blank">
   <img src="https://files.catbox.moe/oyttg3.webp" alt="Discord" class="discord-logo">
 </a>
 
-<h1 class="text-5xl font-bold text-center neon-text mb-12">KCWZ SAB STORE</h1>
+<h1 class="neon-text">KCWZ SAB STORE</h1>
 
-<div class="grid md:grid-cols-3 gap-8" id="products-grid"></div>
+<div id="products-grid"></div>
 
 <script>
-const fallbackProducts = [
-  { id: "brainrot-pass", title: "Golden Esok Sekolah (37.5M/s)", description: "GOATED BRAINROT FOR A GOATED PRICE!", price: "15.00 AUD", link: "https://buy.stripe.com/eVq00lezM9kgfOL3c948000" },
-  { id: "vip-glow", title: "Diamond La Cucaracha (4.9M/s)", description: "COMES WITH FIRE AND TACO HAT TRAITS", price: "8.00 AUD", link: "https://buy.stripe.com/7sY8wRcrEcws6ebcMJ48001" },
-  { id: "brainrot-bundle", title: "Galaxy Los Trala (7M/s)", description: "COMES WITH BUBBLEGUM AND TACO HAT TRAITS", price: "10.00 AUD", link: "https://buy.stripe.com/6oU8wR4Zc1RO31ZfYV48002" }
-];
-
 async function loadProducts() {
   const container = document.getElementById('products-grid');
   let products = [];
+
   try {
     const res = await fetch('products.json');
     if (!res.ok) throw new Error('Network response not ok');
     products = await res.json();
   } catch (err) {
-    console.warn('Failed to load products.json, using fallback products.', err);
-    products = fallbackProducts;
+    console.warn('Failed to load products.json. Using fallback products.', err);
+    products = [
+      {
+        id: "brainrot-pass",
+        title: "Golden Esok Sekolah (37.5M/s)",
+        description: "GOATED BRAINROT FOR A GOATED PRICE!",
+        price: "15.00 AUD",
+        link: "https://buy.stripe.com/eVq00lezM9kgfOL3c948000"
+      },
+      {
+        id: "vip-glow",
+        title: "Diamond La Cucaracha (4.9M/s)",
+        description: "COMES WITH FIRE AND TACO HAT TRAITS",
+        price: "8.00 AUD",
+        link: "https://buy.stripe.com/7sY8wRcrEcws6ebcMJ48001"
+      },
+      {
+        id: "brainrot-bundle",
+        title: "Galaxy Los Trala (7M/s)",
+        description: "COMES WITH BUBBLEGUM AND TACO HAT TRAITS",
+        price: "10.00 AUD",
+        link: "https://buy.stripe.com/6oU8wR4Zc1RO31ZfYV48002"
+      }
+    ];
   }
 
   products.forEach(p => {
     const card = document.createElement('div');
-    card.className = 'card text-center';
+    card.className = 'card';
     card.innerHTML = `
-      <img src="https://files.catbox.moe/4nes5h.png" alt="${p.title}" class="mx-auto mb-4">
-      <h2 class="text-2xl font-bold">${p.title}</h2>
-      <p class="mb-4 text-gray-400">${p.description}</p>
-      <p class="text-xl font-bold mb-4">$${p.price}</p>
-      <button class="bg-cyan-400 text-black px-4 py-2 rounded font-bold hover:bg-white">Buy Now</button>
+      <img src="https://files.catbox.moe/4nes5h.png" alt="${p.title}">
+      <h2 class="text-xl font-bold text-center mb-2">${p.title}</h2>
+      <p class="text-gray-400 text-center mb-2">${p.description}</p>
+      <p class="font-bold text-center mb-4">${p.price}</p>
+      <button>Buy Now</button>
     `;
     card.querySelector('button').addEventListener('click', () => {
       window.location.href = p.link;
@@ -98,5 +149,6 @@ async function loadProducts() {
 
 loadProducts();
 </script>
+
 </body>
 </html>
